--- a/code/package.json
+++ b/code/package.json
@@ -2,7 +2,7 @@
   "name": "timeline",
   "version": "1.0.0",
   "description": "For more information, please visit https://github.com/InnovationCompetition/Timeline",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +18,14 @@
   "homepage": "https://github.com/InnovationCompetition/Timeline#readme",
   "devDependencies": {
     "gulp": "^3.9.1"
+  },
+  "dependencies": {
+    "express": "^4.14.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-livescript": "^3.0.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-pug": "^3.1.0",
+    "gulp-sass": "^2.3.2",
+    "livescript": "^1.5.0"
   }
 }
