--- a/code/package.json
+++ b/code/package.json
@@ -20,6 +20,11 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.1",
+    "angular-messages": "^1.5.8",
     "express": "^4.14.0",
     "gulp-livereload": "^3.8.1",
     "gulp-livescript": "^3.0.1",
