--- a/code/package.json
+++ b/code/package.json
@@ -21,11 +21,16 @@
   },
   "dependencies": {
     "express": "^4.14.0",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-image-optimization": "^0.1.3",
     "gulp-livereload": "^3.8.1",
     "gulp-livescript": "^3.0.1",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-pug": "^3.1.0",
     "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-uglifycss": "^1.0.6",
     "livescript": "^1.5.0"
   }
 }
